--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -751,13 +751,13 @@ button,
   input[type="button"]:hover,
   button:hover,
   .button:hover {
-    background-color: #1fcaa7; }
+    background-color: black; }
   input[type="submit"]:active,
   input[type="reset"]:active,
   input[type="button"]:active,
   button:active,
   .button:active {
-    background-color: #199e83; }
+    background-color: red; }
   input[type="submit"].disabled, input[type="submit"]:disabled,
   input[type="reset"].disabled,
   input[type="reset"]:disabled,
@@ -889,3 +889,13 @@ header, h2 {
   margin: auto;
   text-align: center;
 }
+
+
+button {
+  max-width: fit-content;
+  margin: auto ;
+  padding: auto;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: goldenrod;
+  }
